[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/characters/Alex_16x16.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/montserrat_eb_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/montserrat_eb_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUIs/select_screen/select_screen.gd" type="Script" id=4]
[ext_resource path="res://assets/characters/Amelia_16x16.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/Bob_16x16.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/Adam_16x16.png" type="Texture" id=7]

[node name="SelectScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.420444
margin_bottom = -0.420441
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 40.0
margin_right = 580.0
margin_bottom = 320.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Select"]
margin_right = 520.0
margin_bottom = 230.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Panel" type="ColorRect" parent="Select/CenterRow"]
margin_right = 122.0
margin_bottom = 230.0
size_flags_horizontal = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Sprite" type="Sprite" parent="Select/CenterRow/Panel"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 61, 105 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 24
vframes = 7
frame = 3

[node name="Label" type="Label" parent="Select/CenterRow/Panel"]
margin_left = 14.0
margin_top = 97.0
margin_right = 107.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 3 )
text = "START/ENTER 
to Join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="ColorRect" parent="Select/CenterRow"]
margin_left = 132.0
margin_right = 255.0
margin_bottom = 230.0
size_flags_horizontal = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Sprite" type="Sprite" parent="Select/CenterRow/Panel2"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 61, 105 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 24
vframes = 7
frame = 3

[node name="Label" type="Label" parent="Select/CenterRow/Panel2"]
margin_left = 14.0
margin_top = 97.0
margin_right = 107.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 3 )
text = "START/ENTER 
to Join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="ColorRect" parent="Select/CenterRow"]
margin_left = 265.0
margin_right = 387.0
margin_bottom = 230.0
size_flags_horizontal = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Sprite" type="Sprite" parent="Select/CenterRow/Panel3"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 61, 105 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 24
vframes = 7
frame = 3

[node name="Label" type="Label" parent="Select/CenterRow/Panel3"]
margin_left = 14.0
margin_top = 97.0
margin_right = 107.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 3 )
text = "START/ENTER 
to Join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="ColorRect" parent="Select/CenterRow"]
margin_left = 397.0
margin_right = 520.0
margin_bottom = 230.0
size_flags_horizontal = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Sprite" type="Sprite" parent="Select/CenterRow/Panel4"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 61, 105 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 24
vframes = 7
frame = 3

[node name="Label" type="Label" parent="Select/CenterRow/Panel4"]
margin_left = 14.0
margin_top = 97.0
margin_right = 107.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 3 )
text = "START/ENTER 
to Join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeginHint" type="ColorRect" parent="Select"]
margin_top = 250.0
margin_right = 520.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Label" type="Label" parent="Select/BeginHint"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -13.5
margin_right = 191.5
margin_bottom = 13.5
custom_fonts/font = ExtResource( 2 )
text = "Press SPACE or CONFIRM to begin"
__meta__ = {
"_edit_use_anchors_": false
}
